feat(dotfile): add dotfiles

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,18 +1,25 @@
+set -g default-command "${SHELL}"
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
+# action key
 unbind C-b
 set-option -g prefix C-t
 set-option -g focus-events on
 set-option -g repeat-time 0
-set-option -g mouse on
+# setw -g alternate-screen on
+set -g base-index 1
+set-window-option -g mode-keys vi
+set -g renumber-windows on
+set -g mouse on
+# set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 #### Key bindings
-set-window-option -g mode-keys vi
 set-option -g history-limit 64096
 
 set -sg escape-time 10
-bind-key s set-window-option synchronize-panes
 
+# synchronize panes
+bind-key s set-window-option synchronize-panes
 
 bind -r < resize-pane -L 5
 bind -r > resize-pane -R 5
@@ -25,49 +32,43 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
-# Resizing pane
-# bind -r C-k resize-pane -U 5
-# bind -r C-j resize-pane -D 5
-# bind -r C-h resize-pane -L 5
-# bind -r C-l resize-pane -R 5
-
 set-option -g status-justify "left"
-
 # bind -n M-H previous-window
 # bind -n M-L next-window
 
 set -sg escape-time 10
+
+bind -n S-Left previous-window
+bind -n S-Right next-window
+
 #Moving window
 bind-key -n C-S-Left swap-window -t -1 \; previous-window
 bind-key -n C-S-Right swap-window -t +1 \; next-window
 
-bind -n S-Left previous-window
-bind -n S-Right next-window
 # Reload settings
-bind r source-file ~/.tmux.conf \; display "TMUX Reloaded!"
+bind r source-file ~/.tmux.conf \; display "TMUX Reloaded! 🚀"
+
+unbind -T copy-mode-vi v
+
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+
+
 # Open current directory
-bind o run-shell "open #{pane_current_path}"
+bind o run-shell "open '#{pane_current_path}'"
 bind -r e kill-pane -a
 bind '"' split-window -v -c "#{pane_current_path}"
 bind '%' split-window -h -c "#{pane_current_path}"
 
+# start index from 1
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
 # ctrl+c to send to clipboard
-bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
-# ctrl+v to paste from clipboard
-bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
-
-# Selection with mouse should copy to clipboard right away, in addition to the default action.
-unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
-bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
-
-
-# Middle click to paste from the clipboard
-unbind-key MouseDown2Pane
-bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
-
-# Drag to re-order windows
-bind-key -n MouseDrag1Status swap-window -t=
-
 
 # allow the title bar to adapt to whatever host you connect to
 set -g set-titles on
@@ -75,15 +76,71 @@ set -g set-titles-string "#T"
 
 # import
 if-shell "uname -s | grep -q Darwin" "source ~/.config/tmux/macos.conf"
-# Double click on the window list to open a new window
-bind-key -n DoubleClick1Status new-window
- set -g @plugin 'tmux-plugins/tpm'
- set -g @plugin 'tmux-plugins/tmux-sensible'
- set -g @plugin 'tmux-plugins/tmux-yank'
- set -g @plugin 'christoomey/vim-tmux-navigator'
- set -g @plugin 'seebi/tmux-colors-solarized'
 
+# Double click on the window list to open a new window
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin "tmux-plugins/tmux-online-status"
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'jabirali/tmux-tilish'
+
+# Tilish
+set -g @tilish-default 'tiled'
+# Plugin options.
+set -g @tilish-navigate 'on'
+# set -g pane-active-border-style fg="#c6a0f6"
+
+set -g @continuum-restore 'off'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-nvim 'session'
+set -g @yank_selection_mouse 'clipboard'
+set -g @yank_with_mouse off
+# set -g @open-editor 'C-x'
+set -g @open-B 'https://www.bing.com/search?q='
+set -g @open-S 'https://www.google.com/search?q='
+
+#### COLOUR
+
+# default statusbar colors
+set-option -g status-style bg=colour235,fg=colour136,default
+
+# default window title colors
+set-window-option -g window-status-style fg=colour244,bg=colour234,dim
+
+# active window title colors
+set-window-option -g window-status-current-style fg=colour166,bg=default,bright
+
+# pane border
+set-option -g pane-border-style fg=colour235 #base02
+set-option -g pane-active-border-style fg=colour136,bg=colour235
+
+# message text
+set-option -g message-style bg=colour235,fg=colour166
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
+# ~/tmux.conf
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-source ~/.config/tmux/statusline.conf
+# source-file ~/projects/tokyonight.nvim/extras/tmux/tokyonight_moon.tmux
+# source ~/.config/tmux/statusline.conf
+# source ~/.config/tmux/gruvbox-material-light.tmux.conf
+source ~/.config/tmux/gruvbox-material-dark.tmux.conf
 source ~/.config/tmux/utility.conf
+# setenv -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.tmux/plugins/"
+# if "test ! -d ~/.tmux/plugins/tpm" \
+#    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
+# If you use 'better-tmux'
+# run-shell 'better-tmux --file ~/better-tmux/index.tsx'
