--- a/ghostty/config
+++ b/ghostty/config
@@ -1,7 +1,47 @@
+# Font size
 font-size = 20
-theme = MaterialDesignColors
-font-family = Operator Mono Lig
-shell-integration = fish
-keybind = cmd+shift+space=toggle_quick_terminal
-macos-titlebar-style = hidden
 
+# Ghostty theme
+# theme = MaterialDesignColors
+theme = catppuccin-macchiato
+
+# Font Family
+font-family = Operator Mono Lig
+# font-family = Maple Mono NF
+# font-family = MonoLisa
+# font-style = Regualr
+# font-style-italic = Regular Italic
+# font-style-bold = Bold
+# font-style-bold-italic = Bocl Italic
+
+# Opacity of split windows
+unfocused-split-opacity = 0.97
+
+# Shell integrations
+shell-integration = fish
+
+# Cursor style
+cursor-style-blink = true
+
+# Clipboard settings
+clipboard-read = allow
+clipboard-write = allow
+
+# Keybindings
+keybind = cmd+shift+space=toggle_quick_terminal
+
+# Always show ghostty as the title
+title = ghostty
+# Window settings
+window-width = 90
+window-height = 30
+window-colorspace = display-p3
+window-padding-color = background
+window-padding-balance = true
+window-padding-x = 0
+window-padding-y = 0
+
+# macos options
+macos-titlebar-style = hidden
+macos-titlebar-proxy-icon = hidden
+macos-option-as-alt = true
