--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -115,10 +115,12 @@ alt-slash = 'layout tiles horizontal vertical'
 alt-comma = 'layout accordion horizontal vertical'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#focus
-alt-h = 'focus left --boundaries all-monitors-outer-frame'
-alt-j = 'focus down --boundaries all-monitors-outer-frame'
-alt-k = 'focus up --boundaries all-monitors-outer-frame'
-alt-l = 'focus right --boundaries all-monitors-outer-frame'
+alt-backtick = 'focus left --boundaries-action wrap-around-the-workspace'
+# alt-k = 'focus up --boundaries all-monitors-outer-frame'
+# alt-h = 'focus left --boundaries all-monitors-outer-frame'
+# alt-j = 'focus down --boundaries all-monitors-outer-frame'
+# alt-l = 'focus right --boundaries all-monitors-outer-frame'
+
 # See: https://nikitabobko.github.io/AeroSpace/commands#move
 alt-shift-h = 'move left'
 alt-shift-j = 'move down'
