--- a/ghostty/config
+++ b/ghostty/config
@@ -13,7 +13,8 @@ adjust-underline-thickness = 2
 
 
 # Font Family
-font-family = Operator Mono Lig
+# font-family = Operator Mono Lig
+font-family = JetBrainsMono Nerd Font Mono
 # font-family = Maple Mono NF
 # font-family = MonoLisa
 # font-style = Regualr
