--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -136,7 +136,7 @@ alt-1 = 'workspace 1'
 alt-2 = 'workspace 2'
 alt-3 = 'workspace 3'
 alt-4 = 'workspace 4'
-alt-5 = 'workspace 5'
+alt-w = 'workspace W'
 alt-c = 'workspace C'
 alt-d = 'workspace D'
 alt-m = 'workspace M'
@@ -150,7 +150,7 @@ alt-shift-1 = 'exec-and-forget aerospace move-node-to-workspace --focus-follows-
 alt-shift-2 = 'exec-and-forget aerospace move-node-to-workspace --focus-follows-window 2 && sketchybar --trigger space_windows_change'
 alt-shift-3 = 'exec-and-forget aerospace move-node-to-workspace --focus-follows-window 3 && sketchybar --trigger space_windows_change'
 alt-shift-4 = 'exec-and-forget aerospace move-node-to-workspace --focus-follows-window 4 && sketchybar --trigger space_windows_change'
-alt-shift-5 = 'exec-and-forget aerospace move-node-to-workspace --focus-follows-window 5 && sketchybar --trigger space_windows_change'
+alt-shift-w = 'exec-and-forget aerospace move-node-to-workspace --focus-follows-window W && sketchybar --trigger space_windows_change'
 alt-shift-c = 'exec-and-forget aerospace move-node-to-workspace --focus-follows-window C && sketchybar --trigger space_windows_change'
 alt-shift-d = 'exec-and-forget aerospace move-node-to-workspace --focus-follows-window D && sketchybar --trigger space_windows_change'
 alt-shift-m = 'exec-and-forget aerospace move-node-to-workspace --focus-follows-window M && sketchybar --trigger space_windows_change'
