--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -32,7 +32,7 @@ exec-on-workspace-change = [
 ]
 
 # Normalizations. See: https://nikitabobko.github.io/AeroSpace/guide#normalization
-enable-normalization-flatten-containers = false
+enable-normalization-flatten-containers = true
 enable-normalization-opposite-orientation-for-nested-containers = false
 
 # See: https://nikitabobko.github.io/AeroSpace/guide#layouts
