--- a/ghostty/config
+++ b/ghostty/config
@@ -8,16 +8,17 @@ theme = catppuccin-macchiato
 background-opacity = 1.0
 
 # adjust command line
-adjust-underline-position = 6
-adjust-underline-thickness = 2 
+adjust-underline-position = 8
+adjust-underline-thickness = 1 
 
 # Font Family
+font-family = Berkeley Mono
+font-family = Noto Sans CJK KR
 # font-family = Operator Mono Lig
 # font-family = Berkeley Mono Trial Regular
 # font-family = JetBrainsMono Nerd Font Mono
 # font-family = PlemolJP Console NF
 # font-family = Maple Mono NF
-font-family = Berkeley Mono
 # font-family = Martian Mono
 # font-family = MonoLisa
 
