--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -222,9 +222,9 @@ run = 'layout floating'
 # run = 'move-node-to-workspace 2'
 
 # IDE / WebStorm
-# [[on-window-detected]]
-# if.app-id = 'com.jetbrains.WebStorm'
-# run = 'move-node-to-workspace W'
+[[on-window-detected]]
+if.app-id = 'com.jetbrains.WebStorm'
+run = 'move-node-to-workspace W'
 
 # IDE / Ghostty
 # [[on-window-detected]]
@@ -232,9 +232,9 @@ run = 'layout floating'
 # run = 'layout floating'
 
 # KakaoTalk for mac
-# [[on-window-detected]]
-# if.app-id = 'com.kakao.KakaoTalkMac'
-# run = ["layout floating", "move-node-to-workspace T"]
+[[on-window-detected]]
+if.app-id = 'com.kakao.KakaoTalkMac'
+run = ["layout floating", "move-node-to-workspace T"]
 
 # Finder
 # [[on-window-detected]]
@@ -247,16 +247,21 @@ run = 'layout floating'
 # run = ["layout floating", "move-node-to-workspace 4"]
 
 # Slack
-# [[on-window-detected]]
-# if.app-id = 'com.tinyspeck.slackmacgap'
-# run = ["layout tiling", "move-node-to-workspace S"]
+[[on-window-detected]]
+if.app-id = 'com.tinyspeck.slackmacgap'
+run = ["layout tiling", "move-node-to-workspace S"]
 
 # Message
-# [[on-window-detected]]
-# if.app-id = 'com.apple.MobileSMS'
-# run = ["layout tiling", "move-node-to-workspace M"]
+[[on-window-detected]]
+if.app-id = 'com.apple.MobileSMS'
+run = ["layout tiling", "move-node-to-workspace M"]
+
+# Visual Studio Code
+[[on-window-detected]]
+if.app-id = 'com.microsoft.VSCode'
+run = ["layout tiling", "move-node-to-workspace C"]
 
 # Discord
-# [[on-window-detected]]
-# if.app-id = 'com.hnc.Discord'
-# run = ["layout tiling", "move-node-to-workspace D"]
+[[on-window-detected]]
+if.app-id = 'com.hnc.Discord'
+run = ["layout tiling", "move-node-to-workspace D"]
