--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -185,31 +185,26 @@ alt-shift-j = ['join-with down', 'mode main']
 alt-shift-k = ['join-with up', 'mode main']
 alt-shift-l = ['join-with right', 'mode main']
 
-[[on-window-detected]]
-check-further-callbacks = true
-run = 'layout floating'
+# [[on-window-detected]]
+# check-further-callbacks = true
+# run = 'layout floating'
 
-# [[on-window-detected]]
-# if.app-id = 'com.google.Chrome'
-# run = ['move-node-to-workspace 1']
-#
-# # KakaoTalk for mac
-# [[on-window-detected]]
-# if.app-id = 'com.kakao.KakaoTalkMac'
-# run = ['move-node-to-workspace 7']
-#
-# [[on-window-detected]]
-# if.app-id = 'com.mitchellh.ghostty'
-# run = ['move-node-to-workspace 3']
-#
-# [[on-window-detected]]
-# if.app-id = 'com.tinyspeck.slackmacgap'
-# run = ['move-node-to-workspace 4']
-#
-# [[on-window-detected]]
-# if.app-id = 'com.hnc.Discord'
-# run = ['move-node-to-workspace 4']
-#
-# [[on-window-detected]]
-# if.app-id = 'com.spotify.client'
-# run = ['move-node-to-workspace 5']
+[[on-window-detected]]
+if.app-id = 'com.kakao.KakaoTalkMac'
+run = ['move-node-to-workspace 7']
+
+[[on-window-detected]]
+if.app-id = 'com.mitchellh.ghostty'
+run = ['move-node-to-workspace 3']
+
+[[on-window-detected]]
+if.app-id = 'com.tinyspeck.slackmacgap'
+run = ['move-node-to-workspace 4']
+
+[[on-window-detected]]
+if.app-id = 'com.hnc.Discord'
+run = ['move-node-to-workspace 6']
+
+[[on-window-detected]]
+if.app-id = 'com.spotify.client'
+run = ['move-node-to-workspace 5']
