--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -16,21 +16,20 @@ after-login-command = []
 # 'after-startup-command' is run after 'after-login-command'
 # Available commands : https://nikitabobko.github.io/AeroSpace/commands
 after-startup-command = [
-  'exec-and-forget /opt/homebrew/opt/sketchybar/bin/sketchybar',
+  # 'exec-and-forget /opt/homebrew/opt/sketchybar/bin/sketchybar',
   # 'exec-and-forget borders active_color=0xffe1e3e4 inactive_color=0xff494d64 width=5.0',
 ]
 
 # exec-on-workspace-change = [
 #   '/bin/bash',
 #   '-c',
-#   '/opt/homebrew/opt/sketchybar/bin/sketchybar --trigger aerospace_workspace_change AEROSPACE_FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE AEROSPACE_PREV_WORKSPACE=$AEROSPACE_PREV_WORKSPACE',
+#   'sketchybar --trigger aerospace_workspace_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE PREV_WORKSPACE=$AEROSPACE_PREV_WORKSPACE',
 # ]
 exec-on-workspace-change = [
   '/bin/bash',
   '-c',
   'sketchybar --trigger aerospace_workspace_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE PREV_WORKSPACE=$AEROSPACE_PREV_WORKSPACE',
 ]
-
 # Normalizations. See: https://nikitabobko.github.io/AeroSpace/guide#normalization
 enable-normalization-flatten-containers = true
 enable-normalization-opposite-orientation-for-nested-containers = true
@@ -57,18 +56,19 @@ key-mapping.preset = 'qwerty'
 # See https://nikitabobko.github.io/AeroSpace/guide#on-focus-changed-callbacks
 # See https://nikitabobko.github.io/AeroSpace/commands#move-mouse
 # on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
-on-focus-changed = [
-  'exec-and-forget sketchybar --trigger aerospace_focus_change',
-]
+# on-focus-changed = [
+#   'exec-and-forget sketchybar --trigger aerospace_focus_change',
+# ]
+on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
 # on-focus-changed = ['move-mouse window-lazy-center']
-
+automatically-unhide-macos-hidden-apps = false
 
 # See https://nikitabobko.github.io/AeroSpace/guide#exec-env-vars
-[exec] # Again, you don't need to copy all config sections to your config.
-inherit-env-vars = true # If you don't touch "exec" section,
+# [exec] # Again, you don't need to copy all config sections to your config.
+# inherit-env-vars = true # If you don't touch "exec" section,
 
-[exec.env-vars] # it will fallback to "default-config.toml"
-PATH = '/opt/homebrew/bin:/opt/homebrew/sbin:${PATH}'
+# [exec.env-vars] # it will fallback to "default-config.toml"
+# PATH = '/opt/homebrew/bin:/opt/homebrew/sbin:${PATH}'
 
 # Gaps between windows (inner-*) and between monitor edges (outer-*).
 # Possible values:
