--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -141,17 +141,21 @@ alt-6 = 'workspace 6'
 alt-7 = 'workspace 7'
 alt-8 = 'workspace 8'
 alt-9 = 'workspace 9'
+alt-0 = 'workspace 0'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
-alt-shift-1 = 'exec-and-forget aerospace move-node-to-workspace --focus-follows-window 1 && sketchybar --trigger space_windows_change'
-alt-shift-2 = 'exec-and-forget aerospace move-node-to-workspace --focus-follows-window 2 && sketchybar --trigger space_windows_change'
-alt-shift-3 = 'exec-and-forget aerospace move-node-to-workspace --focus-follows-window 3 && sketchybar --trigger space_windows_change'
-alt-shift-4 = 'exec-and-forget aerospace move-node-to-workspace --focus-follows-window 4 && sketchybar --trigger space_windows_change'
-alt-shift-5 = 'exec-and-forget aerospace move-node-to-workspace --focus-follows-window 5 && sketchybar --trigger space_windows_change'
-alt-shift-6 = 'exec-and-forget aerospace move-node-to-workspace --focus-follows-window 6 && sketchybar --trigger space_windows_change'
-alt-shift-7 = 'exec-and-forget aerospace move-node-to-workspace --focus-follows-window 7 && sketchybar --trigger space_windows_change'
-alt-shift-8 = 'exec-and-forget aerospace move-node-to-workspace --focus-follows-window 8 && sketchybar --trigger space_windows_change'
-alt-shift-9 = 'exec-and-forget aerospace move-node-to-workspace --focus-follows-window 9 && sketchybar --trigger space_windows_change'
+alt-shift-1 = 'move-node-to-workspace 1'
+alt-shift-2 = 'move-node-to-workspace 2'
+alt-shift-3 = 'move-node-to-workspace 3'
+alt-shift-4 = 'move-node-to-workspace 4'
+alt-shift-5 = 'move-node-to-workspace 5'
+alt-shift-6 = 'move-node-to-workspace 6'
+alt-shift-7 = 'move-node-to-workspace 7'
+alt-shift-8 = 'move-node-to-workspace 8'
+alt-shift-9 = 'move-node-to-workspace 9'
+alt-shift-0 = 'move-node-to-workspace 0'
+
+# exec-and-forget aerospace move-node-to-workspace --focus-follows-window 9 && sketchybar --trigger space_windows_change
 
 alt-shift-f = 'fullscreen'
 
@@ -185,26 +189,26 @@ alt-shift-j = ['join-with down', 'mode main']
 alt-shift-k = ['join-with up', 'mode main']
 alt-shift-l = ['join-with right', 'mode main']
 
-# [[on-window-detected]]
-# check-further-callbacks = true
-# run = 'layout floating'
+[[on-window-detected]]
+check-further-callbacks = true
+run = 'layout floating'
 
 [[on-window-detected]]
 if.app-id = 'com.kakao.KakaoTalkMac'
-run = ['move-node-to-workspace 7']
+run = ['layout tiling', 'move-node-to-workspace 7']
 
 [[on-window-detected]]
 if.app-id = 'com.mitchellh.ghostty'
-run = ['move-node-to-workspace 3']
+run = ['layout tiling', 'move-node-to-workspace 3']
 
 [[on-window-detected]]
 if.app-id = 'com.tinyspeck.slackmacgap'
-run = ['move-node-to-workspace 4']
+run = ['layout tiling', 'move-node-to-workspace 4']
 
 [[on-window-detected]]
 if.app-id = 'com.hnc.Discord'
-run = ['move-node-to-workspace 6']
+run = ['layout tiling', 'move-node-to-workspace 6']
 
 [[on-window-detected]]
 if.app-id = 'com.spotify.client'
-run = ['move-node-to-workspace 5']
+run = ['layout tiling', 'move-node-to-workspace 5']
