--- a/ghostty/config
+++ b/ghostty/config
@@ -12,7 +12,7 @@ background-opacity = 1.0
 
 # adjust command line
 adjust-underline-position = 8
-adjust-underline-thickness = 1 
+adjust-underline-thickness = 1
 
 # Font Family
 font-family = Berkeley Mono
@@ -59,3 +59,5 @@ window-padding-y = 2
 macos-titlebar-style = hidden
 macos-titlebar-proxy-icon = hidden
 macos-option-as-alt = true
+
+mouse-hide-while-typing = true
