--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -3,7 +3,15 @@ git:
   overrideGpg: true
 os:
   editPreset: nvim
+customCommands:
+  - key: "C"
+    command: "git cz"
+    description: "commit with commitizen"
+    context: "files"
+    loadingText: "opening commitizen commit tool"
+    subprocess: true
 gui:
+  mouseEvents: false
   showBottomLine: false
   theme:
     activeBorderColor:
