--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -16,7 +16,7 @@ customCommands:
         title: Commit summary
         initialValue: ''
     description: Commit changes without pre-commit hook
-    command: git commit -n -m "{{index .PromptResponses 0}}"
+    command: git commit -n -m '{{index .PromptResponses 0}}'
     context: files
   - key: "C"
     command: "git cz"
