--- a/nvim/.luarc.jsonc
+++ b/nvim/.luarc.jsonc
@@ -13,6 +13,9 @@
       "lua/float_term.lua",
       "lua/icons.lua",
       // Include some plugins for API completion.
+      "$XDG_DATA_HOME/nvim/lazy/lazy.nvim",
+      "$XDG_DATA_HOME/nvim/lazy/lazy.nvim/lua",
+      "$XDG_DATA_HOME/nvim/lazy/lazy.nvim/lua/lazy",
       "$XDG_DATA_HOME/nvim/lazy/LuaSnip/lua",
       "$XDG_DATA_HOME/nvim/lazy/blink.cmp/lua",
       "$XDG_DATA_HOME/nvim/lazy/codecompanion.nvim/lua",
@@ -35,5 +38,12 @@
       "$XDG_DATA_HOME/nvim/lazy/overseer.nvim/lua/overseer/init.lua",
       "$XDG_DATA_HOME/nvim/lazy/quicker.nvim/lua"
     ]
+  },
+  "diagnostics": {
+    "globals": ["vim", "LazySpec", "LazyFloat", "LazyCmdOptions"],
+    "disable": ["undefined-field", "undefined-global", "undefined-doc-name"]
+  },
+  "telemetry": {
+    "enable": false
   }
 }
