--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -142,6 +142,7 @@ alt-4 = 'workspace 4'
 alt-8 = 'workspace 8'
 alt-9 = 'workspace 9'
 alt-b = 'workspace B' # for browser
+alt-c = 'workspace C' # for code editor e.g. VSCode, Cursor, etc.
 # alt-e = 'workspace E' #
 alt-f = 'workspace F' # for finder
 alt-m = 'workspace M' #
@@ -162,6 +163,7 @@ alt-shift-4 = 'move-node-to-workspace 4 --focus-follows-window'
 alt-shift-8 = 'move-node-to-workspace 8 --focus-follows-window'
 alt-shift-9 = 'move-node-to-workspace 9 --focus-follows-window'
 alt-shift-b = 'move-node-to-workspace B --focus-follows-window'
+alt-shift-c = 'move-node-to-workspace C --focus-follows-window'
 # alt-shift-e = 'move-node-to-workspace E'
 alt-shift-f = 'move-node-to-workspace F --focus-follows-window'
 alt-shift-m = 'move-node-to-workspace M --focus-follows-window'
