--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -92,6 +92,14 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 # Plugin options.
 # set -g pane-active-border-style fg="#c6a0f6"
 
+# Dracula theme network options - show only connection type
+set -g @dracula-network-wifi-label "WiFi"
+set -g @dracula-network-ethernet-label "Ethernet"
+set -g @dracula-network-hosts "8.8.8.8"
+
+# Override status-right to use custom network script
+set -g status-right " #[fg=#ff79c6,bg=#44475a,nobold,nounderscore,noitalics]#[fg=#282a36,bg=#ff79c6] #(/Users/kimyeonsu/.tmux/plugins/tmux/scripts/battery.sh)  #[fg=#8be9fd,bg=#ff79c6,nobold,nounderscore,noitalics]#[fg=#282a36,bg=#8be9fd] #(/Users/kimyeonsu/.config/tmux/scripts/simple_network.sh)  #[fg=#ffb86c,bg=#8be9fd,nobold,nounderscore,noitalics]#[fg=#282a36,bg=#ffb86c] #(/Users/kimyeonsu/.tmux/plugins/tmux/scripts/weather_wrapper.sh true false '') "
+
 set -g @continuum-restore 'off'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
@@ -131,7 +139,7 @@ set-window-option -g clock-mode-colour colour64 #green
 # source-file ~/projects/tokyonight.nvim/extras/tmux/tokyonight_moon.tmux
 # source ~/.config/tmux/statusline.conf
 # source ~/.config/tmux/gruvbox-material-light.tmux.conf
-source ~/.config/tmux/gruvbox-material-dark.tmux.conf
+# source ~/.config/tmux/gruvbox-material-dark.tmux.conf
 source ~/.config/tmux/utility.conf
 # setenv -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.tmux/plugins/"
 # if "test ! -d ~/.tmux/plugins/tpm" \
