--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -144,7 +144,7 @@ alt-9 = 'workspace 9'
 alt-b = 'workspace B' # for browser
 alt-c = 'workspace C' # for code editor e.g. VSCode, Cursor, etc.
 # alt-e = 'workspace E' #
-alt-f = 'workspace F' # for finder
+# alt-f = 'workspace F' # for finder
 alt-m = 'workspace M' #
 alt-n = 'workspace N' # for notes
 # alt-p = 'workspace P'
@@ -165,7 +165,7 @@ alt-shift-9 = 'move-node-to-workspace 9 --focus-follows-window'
 alt-shift-b = 'move-node-to-workspace B --focus-follows-window'
 alt-shift-c = 'move-node-to-workspace C --focus-follows-window'
 # alt-shift-e = 'move-node-to-workspace E'
-alt-shift-f = 'move-node-to-workspace F --focus-follows-window'
+# alt-shift-f = 'move-node-to-workspace F --focus-follows-window'
 alt-shift-m = 'move-node-to-workspace M --focus-follows-window'
 alt-shift-n = 'move-node-to-workspace N --focus-follows-window'
 # alt-shift-p = 'move-node-to-workspace P'
