--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -158,21 +158,21 @@ alt-shift-1 = ['move-node-to-workspace 1', 'workspace 1']
 alt-shift-2 = ['move-node-to-workspace 2', 'workspace 2']
 alt-shift-3 = ['move-node-to-workspace 3', 'workspace 3']
 alt-shift-4 = ['move-node-to-workspace 4', 'workspace 4']
-# alt-shift-5 = 'move-node-to-workspace 5'
-# alt-shift-6 = 'move-node-to-workspace 6'
-# alt-shift-7 = 'move-node-to-workspace 7'
-alt-shift-8 = 'move-node-to-workspace 8 --focus-follows-window'
-alt-shift-9 = 'move-node-to-workspace 9 --focus-follows-window'
-alt-shift-b = 'move-node-to-workspace B --focus-follows-window'
-alt-shift-c = 'move-node-to-workspace C --focus-follows-window'
-# alt-shift-e = 'move-node-to-workspace E'
-# alt-shift-f = 'move-node-to-workspace F --focus-follows-window'
-alt-shift-m = 'move-node-to-workspace M --focus-follows-window'
-alt-shift-n = 'move-node-to-workspace N --focus-follows-window'
-# alt-shift-p = 'move-node-to-workspace P'
-alt-shift-s = 'move-node-to-workspace S --focus-follows-window'
-alt-shift-t = 'move-node-to-workspace T --focus-follows-window'
-# alt-shift-v = 'move-node-to-workspace V'
+# alt-shift-5 = ['move-node-to-workspace 5', 'workspace 5']
+# alt-shift-6 = ['move-node-to-workspace 6', 'workspace 6']
+# alt-shift-7 = ['move-node-to-workspace 7', 'workspace 7']
+alt-shift-8 = ['move-node-to-workspace 8', 'workspace 8']
+alt-shift-9 = ['move-node-to-workspace 9', 'workspace 9']
+alt-shift-b = ['move-node-to-workspace B', 'workspace B']
+alt-shift-c = ['move-node-to-workspace C', 'workspace C']
+# alt-shift-e = ['move-node-to-workspace E', 'workspace E']
+# alt-shift-f = ['move-node-to-workspace F', 'workspace F']
+alt-shift-m = ['move-node-to-workspace M', 'workspace M']
+alt-shift-n = ['move-node-to-workspace N', 'workspace N']
+# alt-shift-p = ['move-node-to-workspace P', 'workspace P']
+alt-shift-s = ['move-node-to-workspace S', 'workspace S']
+alt-shift-t = ['move-node-to-workspace T', 'workspace T']
+# alt-shift-v = ['move-node-to-workspace V', 'workspace V']
 
 # exec-and-forget aerospace move-node-to-workspace --focus-follows-window 9 && sketchybar --trigger space_windows_change
 
