--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -224,6 +224,10 @@ run = 'layout floating'
 if.app-id = 'com.mitchellh.ghostty'
 run = "move-node-to-workspace T"
 
+[[on-window-detected]]
+if.app-id = 'com.todesktop.230313mzl4w4u92'
+run = "move-node-to-workspace C"
+
 # [[on-window-detected]]
 # if.app-id = 'com.google.Chrome'
 # run = "move-node-to-workspace B"
