--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -144,6 +144,7 @@ alt-8 = 'workspace 8'
 alt-9 = 'workspace 9'
 alt-b = 'workspace B' # for browser
 alt-c = 'workspace C' # for code editor e.g. VSCode, Cursor, etc.
+alt-o = 'workspace O'
 # alt-e = 'workspace E' #
 # alt-f = 'workspace F' # for finder
 alt-m = 'workspace M' #
@@ -169,6 +170,7 @@ alt-shift-c = ['move-node-to-workspace C', 'workspace C']
 # alt-shift-f = ['move-node-to-workspace F', 'workspace F']
 alt-shift-m = ['move-node-to-workspace M', 'workspace M']
 alt-shift-n = ['move-node-to-workspace N', 'workspace N']
+alt-shift-o = ['move-node-to-workspace O', 'workspace O']
 # alt-shift-p = ['move-node-to-workspace P', 'workspace P']
 alt-shift-s = ['move-node-to-workspace S', 'workspace S']
 alt-shift-t = ['move-node-to-workspace T', 'workspace T']
@@ -242,7 +244,7 @@ run = "move-node-to-workspace N"
 
 [[on-window-detected]]
 if.app-id = 'md.obsidian'
-run = "move-node-to-workspace N"
+run = "move-node-to-workspace O"
 
 [[on-window-detected]]
 if.app-id = 'com.apple.mail'
