--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -83,7 +83,7 @@ inner.horizontal = 20
 inner.vertical = 20
 outer.left = 20
 outer.bottom = 40
-outer.top = 10
+outer.top = 0
 outer.right = 20
 
 # 'main' binding mode declaration
@@ -152,7 +152,7 @@ alt-n = 'workspace N' # for notes
 # alt-p = 'workspace P'
 alt-s = 'workspace S' # for slack
 alt-t = 'workspace T' # for terminal shell
-# alt-v = 'workspace V'
+alt-v = 'workspace V'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
 alt-shift-1 = ['move-node-to-workspace 1', 'workspace 1']
@@ -174,6 +174,7 @@ alt-shift-o = ['move-node-to-workspace O', 'workspace O']
 # alt-shift-p = ['move-node-to-workspace P', 'workspace P']
 alt-shift-s = ['move-node-to-workspace S', 'workspace S']
 alt-shift-t = ['move-node-to-workspace T', 'workspace T']
+alt-shift-v = ['move-node-to-workspace V', 'workspace V']
 # alt-shift-v = ['move-node-to-workspace V', 'workspace V']
 
 # exec-and-forget aerospace move-node-to-workspace --focus-follows-window 9 && sketchybar --trigger space_windows_change
